src/main/default/objects/DR_Fulfillment__c/DR_Fulfillment__c.object-meta.xml
<CustomObject>
    <description>Store information regarding fulfillment</description>
    <label>Digital River Fulfillment</label>
    <nameField>
        <displayFormat>Fulfillment-{000000}</displayFormat>
        <label>DR Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital River Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>