src/main/default/objects/DR_Fulfillment__c/fields/DR_Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>DR_Fulfillment_Status__c</fullName>
    <description>Open - Fulfillment request has to be sent for Order Item(s)
Reprocess - Previous Attempt to send Fulfillment Request to DR failed. Will be reprocessed in next run
Completed - Fulfillment process is completed for this Order.
Failed - Failed Processing this Order after multiple attempts.</description>
    <label>Digital River Fulfillment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>