src/main/default/objects/DR_Fulfillment__c/fields/DR_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_Id__c</fullName>
    <description>Digital River Order ID</description>
    <externalId>true</externalId>
    <label>Digital River Order Id</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>