src/main/default/objects/DR_Fulfillment__c/fields/DR_Order_State__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_State__c</fullName>
    <description>Digital River Order State</description>
    <label>Digital River Order State</label>
    <length>128</length>
    <type>Text</type>
</CustomField>