src/main/default/objects/DR_Fulfillment__c/fields/Eligible_For_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is fulfillment record eligible for fulfillment</description>
    <label>Eligible For Fulfillment</label>
    <type>Checkbox</type>
</CustomField>