src/main/default/objects/DR_Fulfillment__c/fields/Is_Fulfillment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Fulfillment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is fulfillment is completed</description>
    <label>Is Fulfillment Completed</label>
    <type>Checkbox</type>
</CustomField>