src/main/default/objects/DR_Fulfillment__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Information about the Success or Failure of Posting fulfillment to DR</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>