src/main/default/objects/DR_Fulfillment__c/fields/Order_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Order_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Order is cancelled at DR. This will be set to true when order.cancelled event is received by SF</description>
    <inlineHelpText>Indicates if the Order is cancelled at DR. This will be set to true when order.cancelled event is received by SF</inlineHelpText>
    <label>Order Cancelled</label>
    <type>Checkbox</type>
</CustomField>