src/main/default/objects/DR_Fulfillment__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Salesforce order Id</description>
    <label>Order Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>