src/main/default/objects/DR_Fulfillment__c/fields/Retry_Attempts_Made__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempts_Made__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Retry Attempts made for sending Fulfillment</description>
    <inlineHelpText>Number of Retry Attempts made for sending Fulfillment</inlineHelpText>
    <label>Retry Attempts Made</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>