src/main/default/objects/DR_Fulfillment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DR_Fulfillment_Status__c</columns>
    <columns>DR_Order_Id__c</columns>
    <columns>DR_Order_State__c</columns>
    <columns>Retry_Attempts_Made__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>