src/main/default/objects/DR_Fulfillment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>DR_Order_Id__c</columns>
    <columns>DR_Fulfillment_Status__c</columns>
    <columns>DR_Order_State__c</columns>
    <columns>Order_Id__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>